[chore] move dto object to dto package
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>