@@ -17,18 +17,17 @@
 
 package org.apache.hertzbeat.manager.component.alerter.impl;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.hertzbeat.common.entity.alerter.Alert;
 import org.apache.hertzbeat.common.entity.manager.NoticeReceiver;
 import org.apache.hertzbeat.common.entity.manager.NoticeTemplate;
 import org.apache.hertzbeat.common.util.StrUtil;
+import org.apache.hertzbeat.manager.pojo.dto.FlyBookWebHookDto;
+import org.apache.hertzbeat.manager.pojo.model.CommonRobotNotifyResp;
 import org.apache.hertzbeat.manager.support.exception.AlertNoticeException;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
@@ -51,25 +50,25 @@ final class FlyBookAlertNotifyHandlerImpl extends AbstractAlertNotifyHandlerImpl
             FlyBookWebHookDto flyBookWebHookDto = new FlyBookWebHookDto();
             flyBookWebHookDto.setMsgType("post");
 
-            Content content = new Content();
+            FlyBookWebHookDto.Content content = new FlyBookWebHookDto.Content();
             flyBookWebHookDto.setContent(content);
 
-            Post post = new Post();
+            FlyBookWebHookDto.Post post = new FlyBookWebHookDto.Post();
             content.setPost(post);
 
-            ZhCn zhCn = new ZhCn();
+            FlyBookWebHookDto.ZhCn zhCn = new FlyBookWebHookDto.ZhCn();
             post.setZhCn(zhCn);
 
             zhCn.setTitle("[" + bundle.getString("alerter.notify.title") + "]");
 
-            List<FlyBookContent> contentList = new ArrayList<>();
+            List<FlyBookWebHookDto.FlyBookContent> contentList = new ArrayList<>();
 
-            FlyBookContent textContent = new FlyBookContent();
+            FlyBookWebHookDto.FlyBookContent textContent = new FlyBookWebHookDto.FlyBookContent();
             textContent.setTag("text");
             textContent.setText(renderContent(noticeTemplate, alert));
             contentList.add(textContent);
 
-            FlyBookContent linkContent = new FlyBookContent();
+            FlyBookWebHookDto.FlyBookContent linkContent = new FlyBookWebHookDto.FlyBookContent();
             linkContent.setTag("a");
             linkContent.setText(bundle.getString("alerter.notify.console"));
             linkContent.setHref(alerterProperties.getConsoleUrl());
@@ -78,18 +77,18 @@ final class FlyBookAlertNotifyHandlerImpl extends AbstractAlertNotifyHandlerImpl
             String userId = receiver.getUserId();
             List<String> userIdList = StrUtil.analysisArgToList(userId);
             if (userIdList != null && !userIdList.isEmpty()) {
-                List<FlyBookContent> atContents = userIdList.stream()
+                List<FlyBookWebHookDto.FlyBookContent> atContents = userIdList.stream()
                         .map(userID -> {
-                            FlyBookContent atContent = new FlyBookContent();
+                            FlyBookWebHookDto.FlyBookContent atContent = new FlyBookWebHookDto.FlyBookContent();
                             atContent.setTag("at");
                             atContent.setUserId(userID);
                             return atContent;
                         })
-                        .collect(Collectors.toList());
+                        .toList();
                 contentList.addAll(atContents);
             }
 
-            List<List<FlyBookContent>> contents = Collections.singletonList(contentList);
+            List<List<FlyBookWebHookDto.FlyBookContent>> contents = Collections.singletonList(contentList);
             zhCn.setContent(contents);
 
             String webHookUrl = alerterProperties.getFlyBookWebhookUrl() + receiver.getAccessToken();
@@ -115,77 +114,9 @@ final class FlyBookAlertNotifyHandlerImpl extends AbstractAlertNotifyHandlerImpl
         }
     }
 
-
     @Override
     public byte type() {
         return 6;
-    }
-
-    @Data
-    private static class FlyBookWebHookDto {
-
-        private static final String DEFAULT_MSG_TYPE = "post";
-
-        /**
-         * Message type
-         */
-        @JsonProperty("msg_type")
-        private String msgType = DEFAULT_MSG_TYPE;
-
-
-        private Content content;
-
-    }
-
-    /**
-     * Message content
-     */
-    @Data
-    private static class Content {
-        public Post post;
-    }
-
-    @Data
-    private static class FlyBookContent {
-        /**
-         * format currently supports text、hyperlink、@people function
-         */
-        public String tag;
-
-        /**
-         * text
-         */
-        public String text;
-
-        /**
-         * hyperlink address
-         */
-        public String href;
-
-        @JsonProperty("user_id")
-        public String userId;
-
-        @JsonProperty("user_name")
-        public String userName;
-    }
-
-    @Data
-    private static class Post {
-        @JsonProperty("zh_cn")
-        public ZhCn zhCn;
-    }
-
-    @Data
-    private static class ZhCn {
-        /**
-         * Title
-         */
-        public String title;
-
-        /**
-         * Content
-         */
-        public List<List<FlyBookContent>> content;
     }
 
 }
